add implementation of /v1/blocks/{tag}/uncle_count endpoint
