# jsearch/api/app.py
@@ -58,6 +58,7 @@ def define_routes(app: Application):
     add('GET', '/v1/blocks/{tag}', blocks.get_block)
     add('GET', '/v1/blocks/{tag}/transactions', blocks.get_block_transactions)
     add('GET', '/v1/blocks/{tag}/uncles', blocks.get_block_uncles)
+    add('GET', '/v1/blocks/{tag}/uncle_count', blocks.get_block_uncle_count)
     add('GET', '/v1/blocks/{tag}/internal_transactions', blocks.get_block_internal_transactions)
 
     add('GET', '/v1/transactions/{txhash}', explorer.get_transaction)
